# basecode

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  alpha_compiler.cpp  alpha_compiler.h  alpha_parser.cpp  alpha_parser.h  ast.cpp  ast.h  bytes.h  compiler.cpp  compiler.h  conanfile.txt  evaluator.cpp  evaluator.h  example.bc  hex_formatter.cpp  hex_formatter.h  instruction_emitter.cpp  instruction_emitter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  parser_types.h  result.h  result_message.h  scope.cpp  scope.h  symbol_table.cpp  symbol_table.h  terp.cpp  terp.h  todo.txt  token.cpp  token.h
alpha-core/: CMakeLists.txt  compiler_types.h  configure.in.h  exports.cpp
alpha-core/common/: bytes.h  colorizer.cpp  colorizer.h  defer.h  graphviz_formatter.cpp  graphviz_formatter.h  hex_formatter.cpp  hex_formatter.h  id_pool.cpp  id_pool.h  result.h  result_message.h  rune.cpp  rune.h  source_file.cpp  source_file.h  source_location.cpp  source_location.h  string_support.cpp  string_support.h
alpha-core/compiler/: assembly_variable.cpp  assembly_variable.h  ast_evaluator.cpp  ast_evaluator.h  bytecode_emitter.cpp  bytecode_emitter.h  code_dom_formatter.cpp  code_dom_formatter.h  compiler_types.cpp  compiler_types.h  element_builder.cpp  element_builder.h  element_map.h  emit_context.cpp  emit_context.h  scope_manager.cpp  scope_manager.h  session.cpp  session.h  string_intern_map.cpp  variable.cpp  variable.h
alpha-core/compiler/elements/: address_of_intrinsic.cpp  address_of_intrinsic.h  alias.cpp  alias.h  align_of_intrinsic.cpp  align_of_intrinsic.h  alloc_intrinsic.cpp  alloc_intrinsic.h  any_type.cpp  any_type.h  argument_list.cpp  argument_list.h  array_constructor.cpp  array_type.cpp  array_type.h  assembly_label.cpp  assembly_label.h  assignment.cpp  assignment.h  ast_evaluator.cpp  ast_evaluator.h  attribute.cpp  attribute.h  binary_operator.cpp  binary_operator.h  block.cpp  block.h  bool_type.cpp  bool_type.h  boolean_literal.cpp  boolean_literal.h  break_element.cpp  break_element.h  cast.cpp  cast.h  character_literal.h  comment.cpp  comment.h  composite_type.cpp  composite_type.h  (+102 more)
alpha-core/include/basecode/: compiler.h
alpha-core/parser/: ast.cpp  ast.h  ast_formatter.cpp  ast_formatter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
alpha-core/vm/: assembler.cpp  assembler.h  assembly_listing.cpp  assembly_listing.h  instruction_block.cpp  instruction_block.h  instruction_emitter.cpp  instruction_emitter.h  label.cpp  label.h  register_allocator.h  segment.cpp  segment.h  stack_frame.cpp  stack_frame.h  symbol.cpp  symbol.h  terp.cpp  terp.h
bac/: CMakeLists.txt  main.cpp
basecode/: CMakeLists.txt  configure.in.h  exports.cpp
basecode/common/: bytes.h  colorizer.cpp  colorizer.h  defer.h  directed_graph.cpp  directed_graph.h  graphviz_formatter.cpp  graphviz_formatter.h  hex_formatter.h  id_pool.cpp  id_pool.h  memory_pool.cpp  memory_pool.h  result.h  result_message.h  rune.cpp  rune.h  source_file.cpp  source_file.h  source_location.h  string_support.cpp  string_support.h  term_stream_builder.cpp  term_stream_builder.h
basecode/compiler/: ast_evaluator.cpp  ast_evaluator.h  byte_code_emitter.cpp  byte_code_emitter.h  cfg_formatter.cpp  cfg_formatter.h  code_dom_formatter.cpp  compiler_types.cpp  compiler_types.h  element_builder.cpp  element_builder.h  element_map.cpp  element_map.h  elements.h  scope_manager.cpp  scope_manager.h  session.cpp  session.h  stack_frame.cpp  stack_frame.h  stack_frame_entry.cpp  stack_frame_entry.h  string_intern_map.cpp  string_intern_map.h  type_name_builder.cpp  type_name_builder.h  variable.cpp  variable.h  variable_map.cpp  variable_map.h
basecode/compiler/api/: dom.cpp  kernel.cpp  kernel.h  wrappers.cpp
basecode/compiler/elements/: address_of_intrinsic.cpp  address_of_intrinsic.h  align_of_intrinsic.cpp  align_of_intrinsic.h  alloc_intrinsic.cpp  alloc_intrinsic.h  any_type.cpp  argument_list.cpp  argument_list.h  argument_pair.cpp  argument_pair.h  array_constructor.cpp  array_constructor.h  array_type.cpp  array_type.h  assembly_directive.cpp  assembly_directive.h  assembly_label.cpp  assembly_label.h  assembly_literal_label.cpp  assembly_literal_label.h  assert_directive.cpp  assert_directive.h  assignment.cpp  assignment.h  assignment_target.cpp  assignment_target.h  attribute.cpp  attribute.h  binary_operator.cpp  binary_operator.h  block.cpp  block.h  bool_type.cpp  bool_type.h  boolean_literal.cpp  boolean_literal.h  break_element.cpp  break_element.h  case_element.cpp  (+159 more)
basecode/debugger/: assembly_window.cpp  assembly_window.h  command_window.cpp  command_window.h  debugger_types.cpp  debugger_types.h  environment.cpp  environment.h  footer_window.cpp  header_window.cpp  memory_window.cpp  memory_window.h  output_window.cpp  output_window.h  registers_window.cpp  registers_window.h  stack_window.cpp  stack_window.h  window.cpp  window.h
basecode/include/basecode/: compiler.h
basecode/parser/: ast.cpp  ast.h  ast_formatter.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h  token_pool.cpp  token_pool.h
basecode/vm/: assembler.cpp  assembler.h  assembly_listing.cpp  assembly_listing.h  assembly_parser.cpp  assembly_parser.h  basic_block.cpp  basic_block.h  basic_block_map.cpp  basic_block_map.h  default_allocator.cpp  default_allocator.h  ffi.cpp  ffi.h  instruction_block.cpp  instruction_block.h  label.cpp  label.h  label_map.cpp  label_map.h  register_allocator.cpp  register_allocator.h  segment.cpp  segment.h  stack_frame.h  symbol.cpp  symbol.h  terp.cpp  terp.h  vm_types.cpp  vm_types.h
bc/: CMakeLists.txt  main.cpp
share/prototypes/bootstrap-redux/: .gitignore  .gutctags  CMakeLists.txt  LICENSE.md  notes.txt  project.vim  spec.txt  todo.txt
share/prototypes/bootstrap-redux/basecode/: CMakeLists.txt  configure.in.h  defer.h  (+4 more)
share/prototypes/vm/: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
src/libcompiler/: CMakeLists.txt  compiler.cpp  configure.in.h
src/libcompiler-test/: CMakeLists.txt  main.cpp
(+3795 files in other folders)
